SFDCProject/src/objects/Service_Contract_Event__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_to_Credit_Memo_Amt__c</fullName>
        <label>Adjustment to Credit Memo Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <formula>TEXT(Service_Contract__r.Status__c)</formula>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attached_Home_Approved__c</fullName>
        <label>Attached Home Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutoCap__c</fullName>
        <label>AutoCap</label>
        <picklist>
            <picklistValues>
                <fullName>AutoCap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer approved plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Build_Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account lookup to the build partner the project is subcontracted to.</description>
        <inlineHelpText>What build partner are we subcontracting with for this project?</inlineHelpText>
        <label>Build Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contract Events</relationshipLabel>
        <relationshipName>Service_Contract_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Build_able_as_Sold__c</fullName>
        <label>Build-able as Sold?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C1_Terms__c</fullName>
        <formula>Service_Contract__r.C1_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C1 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C2_Terms__c</fullName>
        <formula>Service_Contract__r.C2_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C2 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C3_Terms__c</fullName>
        <formula>Service_Contract__r.C3_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C3 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAP_Status__c</fullName>
        <label>CAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 1x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 2x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 3x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 4x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 5x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 6x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1 - Call/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 2 - Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 5 - Call/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 6 - Called Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAP_date_approved__c</fullName>
        <label>CAP date approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Roof for Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided to Purchase System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Renovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing/Savings Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpermitted Structures on Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Denied Interconnection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Credit_Memo_Amt_Applied__c</fullName>
        <label>Cash Grant Credit Memo Amt Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Credit_Memo_Date_Applied__c</fullName>
        <label>Cash Grant Credit Memo Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commencement_of_Construction__c</fullName>
        <label>Commencement of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Deal_Received__c</fullName>
        <label>Complete Deal Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_of_Construction__c</fullName>
        <label>Completion of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conduit_run__c</fullName>
        <label>Conduit run</label>
        <picklist>
            <picklistValues>
                <fullName>Attic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (see Customer Install Concerns)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Costco_Payment_Approved__c</fullName>
        <label>Costco Payment Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costco_Payment_Pre_Tax__c</fullName>
        <label>Costco Payment Pre-Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costco_SPO_Appointment_Location__c</fullName>
        <label>Costco SPO Appointment Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costco_SPO_Collection_Appointment__c</fullName>
        <label>Costco SPO Collection Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costco_SPO_Payment_Collected__c</fullName>
        <label>Costco SPO Payment Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costco_SPO_Payment_Type__c</fullName>
        <label>Costco SPO Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit/Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Costco_SPO_Signoff_Completed__c</fullName>
        <label>Costco SPO Signoff Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costco_SPO_Signoff_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Costco SPO Signoff Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contract_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Costco_Warehouse_Payment__c</fullName>
        <label>Costco Warehouse Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costco_spo_amount__c</fullName>
        <label>Costco spo amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costco_spo_delivery_date__c</fullName>
        <label>Costco spo delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_on_Rebate__c</fullName>
        <label>Credit Memo on Rebate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_memo_amt_applied__c</fullName>
        <label>Credit memo amt applied</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Critter_guard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critter guard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_1_Amount_Paid__c</fullName>
        <label>Cust Origination Fee 1 Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_1_Payment_Date__c</fullName>
        <label>Cust Origination Fee 1 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_2_Amount_Paid__c</fullName>
        <label>Cust Origination Fee 2 Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_2_Payment_Date__c</fullName>
        <label>Cust Origination Fee 2 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Signoff_Month__c</fullName>
        <formula>DATE((year(DATEVALUE(Customer_Signoff__c) )),(month( DATEVALUE(Customer_Signoff__c) )),1)</formula>
        <label>Cust Signoff Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <formula>Service_Contract__r.Contact.FirstName + &quot; &quot; + Service_Contract__r.Contact.LastName</formula>
        <label>Customer Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Sent__c</fullName>
        <label>Customer Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signoff__c</fullName>
        <label>Customer Signoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_s_Email_System_Field__c</fullName>
        <formula>TEXT(Service_Contract__r.LastModifiedDate)</formula>
        <label>Customer&apos;s Email (System Field)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Email__c</fullName>
        <label>Customer&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_s_Phone__c</fullName>
        <formula>Service_Contract__r.Customer_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Inspection_Requested__c</fullName>
        <label>Date Inspection Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Site_Audit_was_Scheduled__c</fullName>
        <label>Date when Site Audit was Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_after_Customer_Signoff__c</fullName>
        <formula>IF(ISBLANK(PTO__c),today() - DATEVALUE(Customer_Signoff__c), PTO__c-DATEVALUE(Customer_Signoff__c))</formula>
        <label>Days after Customer Signoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_after_PTO_and_no_rebate_form_sent__c</fullName>
        <formula>If (ISBLANK(PTO__c), 
(Today () - M2_proof_substantial_completion__c), 
(PTO__c - M2_proof_substantial_completion__c)
)</formula>
        <label>Days after PTO and no rebate form sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_PTO_since_M2__c</fullName>
        <formula>If (ISBLANK(PTO__c), 
(Today () -  M2_proof_substantial_completion__c), 
(PTO__c - M2_proof_substantial_completion__c)
)</formula>
        <label>Days for PTO since M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_CAP_Approved_to_Permit_Submit__c</fullName>
        <formula>Permit_Submitted_Date__c - CAP_date_approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;CAP Date Approved&quot; and &quot;Permit Submitted&quot;</inlineHelpText>
        <label>Days from CAP Approved to Permit Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_CAP_Date_Approv_to_NTP_Granted__c</fullName>
        <formula>NTP_Granted__c - CAP_date_approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from CAP Date Approv to NTP Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Commence_Construction_to_Final__c</fullName>
        <formula>Final_Inspection_Signoff__c - Commencement_of_Construction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Commence Construction to Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Cust_Signoff_to_M2_Proof__c</fullName>
        <formula>IF ( NOT(ISBLANK(M2_proof_substantial_completion__c )),M2_proof_substantial_completion__c - DATEVALUE(Customer_Signoff__c) ,NULL)</formula>
        <inlineHelpText>Calculates Cycle Time from Customer Signoff to M2 Proof.</inlineHelpText>
        <label>Days from Cust Signoff to M2 Proof</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Cust_Signoff_to_SA_Complete__c</fullName>
        <formula>Site_Audit_Complete__c - DATEVALUE(Customer_Signoff__c)</formula>
        <label>Days from Cust Signoff to SA Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Final_to_Intercon_Docs_Complet__c</fullName>
        <formula>Interconnect_App_Complete__c - Final_Inspection_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Final to Intercon Docs Complet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Interconnect_App_Comp_to_PTO__c</fullName>
        <formula>PTO__c - Interconnect_App_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Interconnect App Comp to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Layout_Rcvd_to_CAP_Date_Approv__c</fullName>
        <formula>CAP_date_approved__c - Layout_Rcvd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Layout Rcvd to CAP Date Approv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_NTP_Granted_to_Permit_Submit__c</fullName>
        <formula>Permit_Submitted_Date__c - NTP_Granted__c</formula>
        <label>Days from NTP Granted to Permit Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Permit_Apprv_to_Commence_Const__c</fullName>
        <formula>Commencement_of_Construction__c - Permit_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Permit Approval Date&quot; and &quot;Commencement of Construction Date&quot;</inlineHelpText>
        <label>Days from Permit Apprv to Commence Const</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Permit_Submit_to_Permit_Approv__c</fullName>
        <formula>Permit_Approval_Date__c - Permit_Submitted_Date__c</formula>
        <label>Days from Permit Submit to Permit Approv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_SA_Complete_to_SA_Results_Recd__c</fullName>
        <formula>IF(Site_Audit_Results_Rcvd__c - Site_Audit_Complete__c &lt; Layout_Rcvd__c - Site_Audit_Complete__c, Site_Audit_Results_Rcvd__c - Site_Audit_Complete__c, Layout_Rcvd__c - Site_Audit_Complete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from SA Complete to SA Results Recd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Sunrun_Signoff_to_Install_Date__c</fullName>
        <description>Added for BSKY-6948 01/06/2016</description>
        <formula>IF( (Service_Contract__r.Install_Date__c - DATEVALUE(SR_Signoff__c)) &lt;= 0, NULL, Service_Contract__r.Install_Date__c - DATEVALUE(SR_Signoff__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Sunrun Signoff to Install Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_M1__c</fullName>
        <formula>IF( ISBLANK( PTO__c ) , ( TODAY() - M1_proof_panel_inverter_delivery__c ), (PTO__c - M1_proof_panel_inverter_delivery__c ))</formula>
        <label>Days since M1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_CAP_Date_Approved__c</fullName>
        <formula>CAP_date_approved__c - DATEVALUE(SR_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to CAP Date Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Construction_Completion__c</fullName>
        <formula>Meter_Test_Date__c - DATEVALUE(SR_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Construction Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_NTP_Granted__c</fullName>
        <formula>NTP_Granted__c - DATEVALUE(SR_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to NTP Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Permit_Approval_Date__c</fullName>
        <formula>Permit_Approval_Date__c - DATEVALUE(SR_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days between &quot;SR Signoff&quot; and the &quot;Permit Approval Date&quot;</inlineHelpText>
        <label>Days to Permit Approval Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Permit_Submitted_Date__c</fullName>
        <formula>Permit_Submitted_Date__c - DATEVALUE(SR_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;SR Signoff&quot; and &quot;Permit Submitted&quot; Date</inlineHelpText>
        <label>Days to Permit Submitted Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Site_Audit_Results_Rcvd__c</fullName>
        <formula>IF(Site_Audit_Results_Rcvd__c - DATEVALUE(SR_Signoff__c) &lt; Layout_Rcvd__c - DATEVALUE(SR_Signoff__c), Site_Audit_Results_Rcvd__c - DATEVALUE(SR_Signoff__c), Layout_Rcvd__c - DATEVALUE(SR_Signoff__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counts &quot;SR Signoff&quot; to the earlier of &quot;Site Audit Results Rcvd&quot; or &quot;Layout Rcvd&quot;</inlineHelpText>
        <label>Days to Site Audit Results Rcvd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Site_Audit_Scheduled__c</fullName>
        <formula>Site_Audit_Scheduled__c - SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Site Audit Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_Welcome_Call_Made__c</fullName>
        <label>Days until Welcome Call Made</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_on_Hold__c</fullName>
        <label>Deal on Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <label>Delay Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Back ordered equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to schedule install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to sign c/o</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to sign RRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to verify NEM install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change order delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Change order form (or new contract)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Comm. (biz name, CA, Officer Cert)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Cond.Approval or CO not signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Conditional Approval or full pymt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: CPASS: Need to sign up for ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Expired credit (over 60 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Failed credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Homeowner’s sig (who passed cr ck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing Initials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing Payment Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing rep signature or ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Mortgage stmt (Owner/Addy ver)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Need credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Need first 5 pages of trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Printed name or legible signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has health issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer requested cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants bigger system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants to wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing structural issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO A – delay certain (IRS required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO B – delay possible (IRS TBD)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Delayed_PTO_Email__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Delayed PTO Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed_Permit_Email__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Delayed Permit Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed_Plans_Email__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Delayed Plans Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Refunded__c</fullName>
        <label>Deposit Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_ID__c</fullName>
        <label>Deposit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Refund_Date__c</fullName>
        <label>Deposit Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft_Quality_Rating__c</fullName>
        <label>Draft Quality Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETA_of_HOA_Approval_Date__c</fullName>
        <label>ETA of HOA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_PE_Stamp__c</fullName>
        <label>Electrical PE Stamp</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrical_Sign_Off__c</fullName>
        <label>Electrical Sign Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electricity_Deposit_Method__c</fullName>
        <label>Electricity Deposit Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Deposit_Processed__c</fullName>
        <label>Electricity Deposit Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electricity_Deposit__c</fullName>
        <label>Electricity Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_of_SR_Signoff_Waiting_Period__c</fullName>
        <formula>SR_Signoff__c + 21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of SR Signoff Waiting Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_change_only__c</fullName>
        <formula>Service_Contract__r.Equipment_change_only__c</formula>
        <label>Equipment change only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Rebate_Amount__c</fullName>
        <label>Est Rebate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_PTO_Date__c</fullName>
        <label>Expected PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Drafter_Name__c</fullName>
        <label>External Drafter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Drafter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Drafter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Contract Events</relationshipLabel>
        <relationshipName>Service_Contract_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_Batch_ID_Inbound__c</fullName>
        <label>External Sync Batch ID Inbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_Batch_ID_Outbound__c</fullName>
        <label>External Sync Batch ID Outbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_Details__c</fullName>
        <label>External Sync Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Sync_InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Sync InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Sync_Status__c</fullName>
        <label>External Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sync Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Sync_System__c</fullName>
        <label>External Sync System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_id__c</fullName>
        <externalId>true</externalId>
        <label>External id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Design_Approval_Requested__c</fullName>
        <label>Facility Design Approval Requested</label>
        <type>Date</type>
    </fields>
</CustomObject>